Con @AlaskaRising, se actualizan modelos acorde a los ajustes realizados al modelos de bases de datos de oikos y se eliminan controladores y modelos de tablas eliminadas del modelo; se actualiza Swagger #6
