# models/dependencia.go
@@ -7,6 +7,7 @@ import (
 	"strconv"
 	"strings"
 	"container/list"
+	"time"
 	"github.com/astaxie/beego/orm"
 )
 
@@ -14,11 +15,15 @@ var elementMap = make(map[int]DependenciaPadreHijo)
 var l = list.New()
 
 type Dependencia struct {
-	Id                         int                           `orm:"column(id);pk;auto"`
-	Nombre                     string                        `orm:"column(nombre)"`
-	TelefonoDependencia        string                        `orm:"column(telefono_dependencia)"`
-	CorreoElectronico          string                        `orm:"column(correo_electronico)"`
-	DependenciaTipoDependencia []*DependenciaTipoDependencia `orm:"reverse(many)"`
+	Id     			 		   int    	`orm:"column(id);pk;auto"`
+	Nombre            		   string 	`orm:"column(nombre)"`
+	TelefonoDependencia        string    `orm:"column(telefono_dependencia)"`
+	CorreoElectronico          string    `orm:"column(correo_electronico)"`
+	Activo           		   bool      `orm:"column(activo)"`
+	FechaCreacion     		   time.Time `orm:"column(fecha_creacion);type(timestamp without time zone)"`
+	FechaModificacion          time.Time `orm:"column(fecha_modificacion);type(timestamp without time zone)"`
+	
+
 }
 
 //Estructura para traer el ID y el nombre de cada proyecto curriculares
