# models/dependencia_tipo_dependencia.go
@@ -5,14 +5,19 @@ import (
 	"fmt"
 	"reflect"
 	"strings"
-
+	"time"
 	"github.com/astaxie/beego/orm"
 )
 
 type DependenciaTipoDependencia struct {
-	Id                int              `orm:"column(id);pk;auto"`
-	TipoDependenciaId *TipoDependencia `orm:"column(tipo_dependencia_id);rel(fk)"`
-	DependenciaId     *Dependencia     `orm:"column(dependencia_id);rel(fk)"`
+	Id                         int              `orm:"column(id);pk;auto"`
+	TipoDependenciaId          *TipoDependencia `orm:"column(tipo_dependencia_id);rel(fk)"`
+	DependenciaId     		   *Dependencia     `orm:"column(dependencia_id);rel(fk)"`
+	Activo           		   bool      `orm:"column(activo)"`
+	FechaCreacion     		   time.Time `orm:"column(fecha_creacion);type(timestamp without time zone)"`
+	FechaModificacion          time.Time `orm:"column(fecha_modificacion);type(timestamp without time zone)"`
+	
+
 }
 
 func (t *DependenciaTipoDependencia) TableName() string {
