# models/espacio_fisico_padre.go
@@ -5,14 +5,18 @@ import (
 	"fmt"
 	"reflect"
 	"strings"
-
+	"time"
 	"github.com/astaxie/beego/orm"
 )
 
 type EspacioFisicoPadre struct {
-	Id    int            `orm:"column(id);pk;auto"`
-	Padre *EspacioFisico `orm:"column(padre);rel(fk)"`
-	Hijo  *EspacioFisico `orm:"column(hijo);rel(fk)"`
+	Id                int            `orm:"column(id);pk;auto"`
+	Padre             *EspacioFisico `orm:"column(padre);rel(fk)"` //Se mantienen mientras se hace transición
+	Hijo              *EspacioFisico `orm:"column(hijo);rel(fk)"`  //Se mantienen mientras se hace transición
+	PadreId           *EspacioFisico `orm:"column(padre_id);rel(fk)"`
+	HijoId  		  *EspacioFisico `orm:"column(hijo_id);rel(fk)"`
+	FechaCreacion     time.Time `orm:"column(fecha_creacion);type(timestamp without time zone)"`
+	FechaModificacion time.Time `orm:"column(fecha_modificacion);type(timestamp without time zone)"`
 }
 
 func (t *EspacioFisicoPadre) TableName() string {
