# models/tipo_uso.go
@@ -5,13 +5,18 @@ import (
 	"fmt"
 	"reflect"
 	"strings"
-
+	"time"
 	"github.com/astaxie/beego/orm"
 )
 
 type TipoUso struct {
-	Id     int    `orm:"column(id);pk;auto"`
-	Nombre string `orm:"column(nombre)"`
+	Id     			  int    `orm:"column(id);pk;auto"`
+	Nombre 			  string `orm:"column(nombre)"`
+	Descripcion       string    `orm:"column(descripcion);null"`
+	CodigoAbreviacion string    `orm:"column(codigo_abreviacion);null"`
+	Activo            bool      `orm:"column(activo)"`
+	FechaCreacion     time.Time `orm:"column(fecha_creacion);type(timestamp without time zone)"`
+	FechaModificacion time.Time `orm:"column(fecha_modificacion);type(timestamp without time zone)"`
 }
 
 func (t *TipoUso) TableName() string {
