# swagger/swagger.json
@@ -445,6 +445,65 @@
                 }
             }
         },
+        "/dependencia/get_dependencias_hijas_by_id/{dependencia}": {
+            "get": {
+                "tags": [
+                    "dependencia"
+                ],
+                "description": "A partir de una dependencia dada, se obtienen las hijas de ella en una estructura de árbol.",
+                "operationId": "DependenciaController.GetDependenciasHijasById",
+                "parameters": [
+                    {
+                        "in": "path",
+                        "name": "dependencia",
+                        "description": "Id de la dependencia",
+                        "required": true,
+                        "type": "integer",
+                        "format": "int64"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/models.DependenciaPadre"
+                        }
+                    },
+                    "403": {
+                        "description": ":dependencia_padre is empty"
+                    }
+                }
+            }
+        },
+        "/dependencia/get_dependencias_padres_by_id/{dependencia}": {
+            "get": {
+                "tags": [
+                    "dependencia"
+                ],
+                "description": "A partir de una dependencia dada, se obtienen todos sus predecesores en una estructura de árbol.",
+                "operationId": "DependenciaController.GetDependenciasPadresById",
+                "parameters": [
+                    {
+                        "in": "path",
+                        "name": "dependencia",
+                        "description": "Id de la dependencia",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/models.DependenciaPadre"
+                        }
+                    },
+                    "404": {
+                        "description": ":dependencia is empty"
+                    }
+                }
+            }
+        },
         "/dependencia/proyectosPorFacultad/{id_facultad}": {
             "get": {
                 "tags": [
@@ -681,26 +740,6 @@
                     },
                     "403": {
                         "description": "body is empty"
-                    }
-                }
-            }
-        },
-        "/dependencia_padre/ArbolDependencias": {
-            "get": {
-                "tags": [
-                    "dependencia_padre"
-                ],
-                "description": "Construye el arbol de dependencias",
-                "operationId": "DependenciaPadreController.ArbolDependencias",
-                "responses": {
-                    "200": {
-                        "description": "",
-                        "schema": {
-                            "$ref": "#/definitions/models.DependenciaPadre"
-                        }
-                    },
-                    "403": {
-                        "description": ""
                     }
                 }
             }
@@ -2233,11 +2272,15 @@
             "title": "AsignacionEspacioFisicoDependencia",
             "type": "object",
             "properties": {
+                "Activo": {
+                    "type": "boolean"
+                },
                 "DependenciaId": {
                     "$ref": "#/definitions/models.Dependencia"
                 },
                 "DocumentoSoporte": {
-                    "type": "string"
+                    "type": "integer",
+                    "format": "int64"
                 },
                 "EspacioFisicoId": {
                     "$ref": "#/definitions/models.EspacioFisico"
@@ -2245,13 +2288,21 @@
                 "Estado": {
                     "type": "string"
                 },
+                "FechaCreacion": {
+                    "type": "string",
+                    "format": "datetime"
+                },
                 "FechaFin": {
                     "type": "string",
-                    "format": "string"
+                    "format": "datetime"
                 },
                 "FechaInicio": {
                     "type": "string",
-                    "format": "string"
+                    "format": "datetime"
+                },
+                "FechaModificacion": {
+                    "type": "string",
+                    "format": "datetime"
                 },
                 "Id": {
                     "type": "integer",
@@ -2279,14 +2330,19 @@
             "title": "Dependencia",
             "type": "object",
             "properties": {
+                "Activo": {
+                    "type": "boolean"
+                },
                 "CorreoElectronico": {
                     "type": "string"
                 },
-                "DependenciaTipoDependencia": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/models.DependenciaTipoDependencia"
-                    }
+                "FechaCreacion": {
+                    "type": "string",
+                    "format": "datetime"
+                },
+                "FechaModificacion": {
+                    "type": "string",
+                    "format": "datetime"
                 },
                 "Id": {
                     "type": "integer",
@@ -2304,7 +2360,21 @@
             "title": "DependenciaPadre",
             "type": "object",
             "properties": {
+                "Activo": {
+                    "type": "boolean"
+                },
+                "FechaCreacion": {
+                    "type": "string",
+                    "format": "datetime"
+                },
+                "FechaModificacion": {
+                    "type": "string",
+                    "format": "datetime"
+                },
                 "Hija": {
+                    "$ref": "#/definitions/models.Dependencia"
+                },
+                "HijaId": {
                     "$ref": "#/definitions/models.Dependencia"
                 },
                 "Id": {
@@ -2313,6 +2383,9 @@
                 },
                 "Padre": {
                     "$ref": "#/definitions/models.Dependencia"
+                },
+                "PadreId": {
+                    "$ref": "#/definitions/models.Dependencia"
                 }
             }
         },
@@ -2320,8 +2393,19 @@
             "title": "DependenciaTipoDependencia",
             "type": "object",
             "properties": {
+                "Activo": {
+                    "type": "boolean"
+                },
                 "DependenciaId": {
                     "$ref": "#/definitions/models.Dependencia"
+                },
+                "FechaCreacion": {
+                    "type": "string",
+                    "format": "datetime"
+                },
+                "FechaModificacion": {
+                    "type": "string",
+                    "format": "datetime"
                 },
                 "Id": {
                     "type": "integer",
@@ -2336,11 +2420,36 @@
             "title": "EspacioFisico",
             "type": "object",
             "properties": {
+                "Activo": {
+                    "type": "boolean"
+                },
+                "Area": {
+                    "type": "number",
+                    "format": "double"
+                },
+                "Capacidad": {
+                    "type": "integer",
+                    "format": "int64"
+                },
                 "Codigo": {
+                    "type": "string"
+                },
+                "CodigoAbreviacion": {
+                    "type": "string"
+                },
+                "Descripcion": {
                     "type": "string"
                 },
                 "Estado": {
                     "type": "string"
+                },
+                "FechaCreacion": {
+                    "type": "string",
+                    "format": "datetime"
+                },
+                "FechaModificacion": {
+                    "type": "string",
+                    "format": "datetime"
                 },
                 "Id": {
                     "type": "integer",
@@ -2377,7 +2486,18 @@
             "title": "EspacioFisicoPadre",
             "type": "object",
             "properties": {
+                "FechaCreacion": {
+                    "type": "string",
+                    "format": "datetime"
+                },
+                "FechaModificacion": {
+                    "type": "string",
+                    "format": "datetime"
+                },
                 "Hijo": {
+                    "$ref": "#/definitions/models.EspacioFisico"
+                },
+                "HijoId": {
                     "$ref": "#/definitions/models.EspacioFisico"
                 },
                 "Id": {
@@ -2386,6 +2506,9 @@
                 },
                 "Padre": {
                     "$ref": "#/definitions/models.EspacioFisico"
+                },
+                "PadreId": {
+                    "$ref": "#/definitions/models.EspacioFisico"
                 }
             }
         },
@@ -2393,6 +2516,23 @@
             "title": "TipoDependencia",
             "type": "object",
             "properties": {
+                "Activo": {
+                    "type": "boolean"
+                },
+                "CodigoAbreviacion": {
+                    "type": "string"
+                },
+                "Descripcion": {
+                    "type": "string"
+                },
+                "FechaCreacion": {
+                    "type": "string",
+                    "format": "datetime"
+                },
+                "FechaModificacion": {
+                    "type": "string",
+                    "format": "datetime"
+                },
                 "Id": {
                     "type": "integer",
                     "format": "int64"
@@ -2406,6 +2546,23 @@
             "title": "TipoEspacioFisico",
             "type": "object",
             "properties": {
+                "Activo": {
+                    "type": "boolean"
+                },
+                "CodigoAbreviacion": {
+                    "type": "string"
+                },
+                "Descripcion": {
+                    "type": "string"
+                },
+                "FechaCreacion": {
+                    "type": "string",
+                    "format": "datetime"
+                },
+                "FechaModificacion": {
+                    "type": "string",
+                    "format": "datetime"
+                },
                 "Id": {
                     "type": "integer",
                     "format": "int64"
@@ -2419,6 +2576,23 @@
             "title": "TipoUso",
             "type": "object",
             "properties": {
+                "Activo": {
+                    "type": "boolean"
+                },
+                "CodigoAbreviacion": {
+                    "type": "string"
+                },
+                "Descripcion": {
+                    "type": "string"
+                },
+                "FechaCreacion": {
+                    "type": "string",
+                    "format": "datetime"
+                },
+                "FechaModificacion": {
+                    "type": "string",
+                    "format": "datetime"
+                },
                 "Id": {
                     "type": "integer",
                     "format": "int64"
@@ -2432,8 +2606,19 @@
             "title": "TipoUsoEspacioFisico",
             "type": "object",
             "properties": {
+                "Activo": {
+                    "type": "boolean"
+                },
                 "EspacioFisicoId": {
                     "$ref": "#/definitions/models.EspacioFisico"
+                },
+                "FechaCreacion": {
+                    "type": "string",
+                    "format": "datetime"
+                },
+                "FechaModificacion": {
+                    "type": "string",
+                    "format": "datetime"
                 },
                 "Id": {
                     "type": "integer",
